--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
               <a href="#" class="menu__link">Contact</a>
             </li>
           </ul>
+
+          <div class="burger">
+            <span class="line1"></span>
+            <span class="line2"></span>
+            <span class="line3"></span>
+          </div>
         </nav>
       </header>
 
@@ -75,8 +81,8 @@
           </form>
         </section>
 
-        <div class="container">
-          <section class="services">
+        <section class="services">
+          <div class="container">
             <h3 class="services__heading">We offer high demand services</h3>
 
             <ul class="services__list">
@@ -117,9 +123,11 @@
                 <button class="btn btn btn--disable">Get started</button>
               </li>
             </ul>
-          </section>
+          </div>
+        </section>
 
-          <section class="design">
+        <section class="design">
+          <div class="container design__inner">
             <h3 class="design__heading">Good design means good business</h3>
 
             <div class="design__grid">
@@ -130,21 +138,21 @@
               </div>
 
               <div class="design__item">
-                <img src="img/booking.png" alt="" class="design__image" />
-                <p class="design__type">Full stack application</p>
-                <h4 class="design__name">Smart home dashboard</h4>
+                <img src="img/onboard.png" alt="" class="design__image" />
+                <p class="design__type">UX/UI design</p>
+                <h4 class="design__name">Onboard application</h4>
               </div>
 
               <div class="design__item">
-                <img src="img/onboard.png" alt="" class="design__image" />
-                <p class="design__type">Full stack application</p>
-                <h4 class="design__name">Smart home dashboard</h4>
+                <img src="img/booking.png" alt="" class="design__image" />
+                <p class="design__type">Mobile application</p>
+                <h4 class="design__name">Booking system</h4>
               </div>
 
               <div class="design__item">
                 <img src="img/juice-product.png" alt="" class="design__image" />
-                <p class="design__type">Full stack application</p>
-                <h4 class="design__name">Smart home dashboard</h4>
+                <p class="design__type">Front End applicati on</p>
+                <h4 class="design__name">Juice product homepage</h4>
               </div>
             </div>
 
@@ -152,9 +160,11 @@
               see more
               <i class="fas fa-long-arrow-alt-right"></i>
             </a>
-          </section>
+          </div>
+        </section>
 
-          <section class="team">
+        <section class="team">
+          <div class="container team__inner">
             <div class="team__content">
               <p class="team__subheading">Meet the team</p>
               <h3 class="team__heading">We are chilled and a laidback team</h3>
@@ -168,9 +178,11 @@
               <img src="img/person1.png" alt="" class="team__image" />
               <img src="img/person2.png" alt="" class="team__image" />
             </div>
-          </section>
+          </div>
+        </section>
 
-          <section class="review">
+        <section class="review">
+          <div class="container">
             <h3 class="review__heading">
               “Fast and outstanding resutls. Edie understands their customer’s
               needs. They have a young and talented team.”
@@ -184,8 +196,8 @@
                 <p class="person__position">The Decorate Gatsby</p>
               </div>
             </div>
-          </section>
-        </div>
+          </div>
+        </section>
       </main>
     </div>
 
@@ -223,5 +235,7 @@
 
       <p class="footer__author">created by @kctrnn - devChallenges.io</p>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
